<resources>
    <string name="app_name">Thirty The Game</string>
    <string name="scoring_title_name">Leaderboard</string>
    <string name="confirm_button">Confirm</string>
    <string name="choice_low">Low</string>
    <string name="choice_4">4</string>
    <string name="choice_5">5</string>
    <string name="choice_6">6</string>
    <string name="choice_7">7</string>
    <string name="choice_8">8</string>
    <string name="choice_9">9</string>
    <string name="choice_10">10</string>
    <string name="choice_11">11</string>
    <string name="choice_12">12</string>
    <string name="choice_none">None</string>
    <string name="total">Total</string>
    <string name="choice">Choice</string>
    <string name="player1">1 Player</string>
    <string name="player2">2 Players</string>
    <string name="player3">3 Players</string>
    <string name="player4">4 Players</string>
    <string name="menu_string">Select number of players</string>
    <string name="dice_desc">Dice</string>
    <string name="roll_button">Roll</string>
    <string name="score_lable">Score</string>
    <string name="player_lable">Player</string>
    <string name="leaderboard_button">Leaderboard</string>
    <string name="turn_lable">Turn</string>

    <string-array name="choices_array">
        <item>@string/choice_low</item>
        <item>@string/choice_4</item>
        <item>@string/choice_5</item>
        <item>@string/choice_6</item>
        <item>@string/choice_7</item>
        <item>@string/choice_8</item>
        <item>@string/choice_9</item>
        <item>@string/choice_10</item>
        <item>@string/choice_11</item>
        <item>@string/choice_12</item>
        <item>@string/choice_none</item>
    </string-array>
</resources>
