<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LeaderBoardActivity">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/score_table"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/top_divider">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_low"
                android:id="@+id/textView2"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_4"
                android:id="@+id/textView3"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_5"
                android:id="@+id/textView4"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_6"
                android:id="@+id/textView5"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_7"
                android:id="@+id/textView6"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_8"
                android:id="@+id/textView7"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_9"
                android:id="@+id/textView8"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_10"
                android:id="@+id/textView9"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_11"
                android:id="@+id/textView10"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/choice_12"
                android:id="@+id/textView11"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Total"
                android:id="@+id/textView12"
                android:textStyle="bold"
                android:background="@color/material_grey_300"
                android:paddingLeft="5dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
